Update to Quarkus 3.31.1, JUnit 6, Testcontainers 2 and Gradle ErrorProne Plugin 5.0.0 (#11)
* update to Quarkus 3.31.1

* update to Gradle ErrorProne Plugin 5.0.0

* this has no effect on tests as this is a build time property and must be set when building before running the tests

* Revert "this has no effect on tests as this is a build time property and must be set when building before running the tests"

This reverts commit 8da8b4f24dfd6090f224a1863d5d94a8b1b5f524.

* activate the JOSDK leader election also for the dev profile, so we have the same behavior as in production